// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocuAtomPasswordCheckList Snapshots should match snapshot 1`] = `
<div
  data-testid="password-checklist"
>
  <div>
    minLength: 
    8
  </div>
  <div>
    Rules: 
    minLength, specialChar, number, capital, match
  </div>
  <div>
    Value: 
    password
  </div>
  <div>
    ValueAgain: 
    password
  </div>
  <div>
    Valid: 
  </div>
</div>
`;

exports[`DocuAtomPasswordCheckList Snapshots should match snapshot with valid password 1`] = `
<div
  data-testid="password-checklist"
>
  <div>
    minLength: 
    8
  </div>
  <div>
    Rules: 
    minLength, specialChar, number, capital, match
  </div>
  <div>
    Value: 
    ValidPassword123!
  </div>
  <div>
    ValueAgain: 
    ValidPassword123!
  </div>
  <div>
    Valid: 
  </div>
</div>
`;
